# InferSim

./: .gitignore  .gitmodules  Cargo.toml  Ideas.md  README.md  config.yml  rust-toolchain  rustfmt.toml
.github/: CONTRIBUTING.md
.github/workflows/: codecov.yml  lint.yml  tests.yml
fifo_vs_clipper/: README.md  async_dynamic_test.py  compare_fifo_clipper.ipynb
fifo_vs_clipper/data/Avglen(100)_ddl(126)/clipper/: jobs.csv
fifo_vs_clipper/data/Avglen(100)_ddl(126)/fifo/: jobs.csv  timeline.json
fifo_vs_clipper/data/Avglen(100)_ddl(252)/fifo/: jobs.csv
fifo_vs_clipper/data/Avglen(100)_ddl(378)/clipper/: jobs.csv
fifo_vs_clipper/data/Avglen(100)_ddl(378)/fifo/: jobs.csv
fifo_vs_clipper/data/Avglen(200)_ddl(236)/clipper/: jobs.csv
fifo_vs_clipper/data/Avglen(200)_ddl(473)/fifo/: timeline.json
fifo_vs_clipper/plot/: result.pptx
log/bs10/fifo/: jobs.csv  timeline.json
log/bs20/Avglen(100)_ddl(126)/clipper/: latency.csv
log/bs20/Avglen(100)_ddl(252)/clipper/: jobs.csv  latency.csv
log/bs20/Avglen(100)_ddl(252)/fifo/: timeline.json
log/bs20/Avglen(100)_ddl(378)/clipper/: latency.csv
log/bs20/Avglen(100)_ddl(378)/fifo/: timeline.json
log/bs20/Avglen(200)_ddl(236)/clipper/: latency.csv
log/bs20/Avglen(200)_ddl(236)/fifo/: jobs.csv  timeline.json
log/bs20/Avglen(200)_ddl(473/clipper/: jobs.csv  latency.csv
log/bs20/Avglen(200)_ddl(473/fifo/: jobs.csv
log/bs20/Avglen(200)_ddl(710)/clipper/: jobs.csv  latency.csv
log/bs20/Avglen(200)_ddl(710)/fifo/: jobs.csv  timeline.json
log/bs20/fifo/: jobs.csv  timeline.json
log/bs4/fifo/: jobs.csv  timeline.json
log/bs4/my/: jobs.csv  timeline.json
mbart/: README.md  async_dynamic_test.py  mbart_plot.ipynb  plotutils.py
mbart/data/unit(10)_per(2)_bud(5)/: final_result.csv  jobs.csv  output.csv  req.csv
mbart/data/unit(12)_per(1)_bud(12)/: final_result.csv  jobs.csv  output.csv  req.csv
mbart/data/unit(20)_per(4)_bud(5)/: final_result.csv  jobs.csv  output.csv  req.csv
resources/: default_config.toml  default_config.yml  test_config.toml
scripts/: analyze_log.ipynb  plotutils.py
src/: config.rs  incoming.rs  lib.rs  output.rs  randvars.rs  schedulers.rs  sim.rs  simulator.rs  types.rs  workers.rs
src/schedulers/: my.rs  nexus.rs
src/sim/: msg.rs  schedulers.rs
src/sim/schedulers/: from_config.rs
src/utils/: app_config.rs  batcher.rs  box_iter.rs  error.rs  float.rs  logging.rs  mod.rs  panic.rs
src/utils/logging/: combined.rs  mod.rs
tests/: test_cli.rs
