#
# Workspace
#
[workspace]
# all path dependencies of the root package becomes workspace member automatically

#
# The root package
#
[package]
name = "infersim"
version = "0.1.0"
authors = ["Peifeng Yu <peifeng@umich.edu>"]
edition = "2018"
repository = "https://github.com/Aetf/infersim"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
Simulator for Dynamic DNN serving, focusing on the variance of inference latency of incoming requests.
"""

#
# Dependencies
#
[dependencies]
# panic handling
human-panic = "1.0.3"
better-panic = "0.2.0"
# error handling
thiserror = "1.0.24"
anyhow = "1.0.40"
# config handling
config = { version = "0.11.0", default-features = false, features = ["toml"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"]}
# log handling
slog = "2.7.0"
slog-term = "2.8.0"
slog-scope = "4.4.0"
slog-async = "2.6.0"
slog-stdlog = "4.1.0"
slog-syslog = { version = "0.12.0", optional = true }
# cli
structopt = "0.3.21"
# business logic
desim = { path = "desim" }
rand = "0.8.3"
rand_seeder = "0.2.2"

[features]
default = []
syslog = ["slog-syslog"]

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"

#
# Compiling profiles
#
[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
