#
# Workspace
#
[workspace]
# all path dependencies of the root package becomes workspace member automatically

#
# The root package
#
[package]
name = "infersim"
version = "0.1.0"
authors = ["Peifeng Yu <peifeng@umich.edu>"]
edition = "2018"
repository = "https://github.com/Aetf/infersim"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
Simulator for Dynamic DNN serving, focusing on the variance of inference latency of incoming requests.
"""

#
# Dependencies
#
[dependencies]
# error handling
color-backtrace = "0.5.1"
thiserror = "1.0.24"
anyhow = "1.0.40"
# config handling
config = { version = "0.11.0", default-features = false, features = ["toml", "yaml"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"]}
# log handling
tracing-appender = "0.1.2"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
tracing-core = "0.1.17"
chrono = "0.4.19"
# cli
structopt = "0.3.21"
# business logic
rand = "0.8.3"
rand_seeder = "0.2.2"
statrs = "0.14.0"
nuts = "0.2.1"
educe = "0.4.16"
parse-display = "0.5.0"
# for config dump
serde_yaml = "0.8.17"
# for chrome tracing
serde_json = "1.0.64"
gen-iter = "0.2.0"
itertools = "0.10.0"
csv = "1.1.6"
approx = "0.5.0"

[features]
default = []

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"

#
# Compiling profiles
#
[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
